UI Bugs Fixed